Topic configuration class for Kafka auto setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,5 @@ spring.kafka.properties.retry.backoff.ms=500
 spring.kafka.properties.schema.registry.url=http://schema-registry:8081
 spring.kafka.properties.basic.auth.credentials.source=USER_INFO
 spring.kafka.properties.basic.auth.user.info=${KAFKA_USER}:${KAFKA_PASSWORD}
-spring.kafka.properties.auto.register.schemas=true
+spring.kafka.properties.auto.register.schemas=false
 spring.kafka.properties.specific.avro.reader=true
