--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,6 +51,7 @@ services:
       - kafka-auto-setup
     ports:
       - "8080:8080"
+    command: ["./wait-for-it.sh", "schema-registry:8081", "--", "./mvnw", "spring-boot:run"]
 
 networks:
   kafka-auto-setup:
