--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@ spring.kafka.client-id=kafka-auto-setup
 spring.kafka.consumer.acks=all
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.group-id=kafka-auto-setup
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.key-deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
 spring.kafka.consumer.value-deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
 
 spring.kafka.producer.acks=all
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.key-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 
 spring.kafka.properties.ssl.endpoint.identification.algorithm=http
@@ -24,3 +24,4 @@ spring.kafka.properties.basic.auth.credentials.source=USER_INFO
 spring.kafka.properties.basic.auth.user.info=${KAFKA_USER}:${KAFKA_PASSWORD}
 spring.kafka.properties.auto.register.schemas=false
 spring.kafka.properties.specific.avro.reader=true
+spring.kafka.properties.key.serializer=org.apache.kafka.common.serialization.StringSerializer
